@@ -1,1 +1,2 @@
+#!/bin/bash
 # This file is just meant to be found
